nav bar and home page fixes
fixed spacing of nav items, fixed invisible text in contact, fixed the colmns that were not stretching all the way,

--- a/StateTemplateV5Beta/Content/StateTemplate/css/custom.css
+++ b/StateTemplateV5Beta/Content/StateTemplate/css/custom.css
@@ -137,7 +137,7 @@
 
 .columns h3 {
     font-size: 2em;
-    color: #fff;
+    /*color: #fff;*/
 }
 
 .white-p {
